Completed fixes on carousel, also adjusted fixes on containers in desktop, all contianers now align.

--- a/chucks-pick3-web/angular-app/src/assets/scss/global-style-sheet.css
+++ b/chucks-pick3-web/angular-app/src/assets/scss/global-style-sheet.css
@@ -97,8 +97,6 @@ p {
 
     font-size: 24px;
 
-    top: 15.4%;
-
     position: absolute;
 
     right: 5%;
