--- a/chucks-pick3-web/angular-app/src/assets/scss/styles.css
+++ b/chucks-pick3-web/angular-app/src/assets/scss/styles.css
@@ -113,7 +113,6 @@ p {
 
   font-size: 24px;
 
-  top: 15.4%;
 
   position: absolute;
 
